--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,12 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
+  "image": "mcr.microsoft.com/devcontainers/universal:latest",
   "features": {
-    "ghcr.io/devcontainers-contrib/features/pnpm:2": {}
+    "ghcr.io/devcontainers-extra/features/pnpm:2": {}
   },
   "postCreateCommand": "git clone https://github.com/ahemed-haneen/terminal-profile.git && cd terminal-profile/for\\ GH\\ codespace/ && ./install_powerline.sh && ./install_profile.sh && cd ... && rm -rf terminal-profile",
-  "forwardPorts": [3000, 5432]
+  "forwardPorts": [3000, 5432], 
+  "extensions": [
+    "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint"
+  ]
 }
